--- a/index.html
+++ b/index.html
@@ -207,22 +207,22 @@
         
         <section id="not-modal">
 
-        <h1 class="cards-category"><a href="events.html" aria-label="Aerial and pole events">What's on</a></h1>
-        <section class="scroll-cards" id="scroll-cards-events"></section>
+        <!-- <h1 class="cards-category"><a href="events.html" aria-label="Aerial and pole events">What's on</a></h1>
+        <section class="scroll-cards" id="scroll-cards-events"></section> -->
 
         <h1 class="cards-category"><a href="studios.html" aria-label="Aerial and pole studios">Find a studio</a></h1>
         <section class="scroll-cards" id="scroll-cards-studios"></section>
 
         <h1 class="cards-category"><a href="clothing.html" aria-label="Aerial and polewear">Discover pole & aerial
                 wear</a></h1>
-                <section class="scroll-cards" id="scroll-cards-clothing"></section>
+        <section class="scroll-cards" id="scroll-cards-clothing"></section>
 
         <h1 class="cards-category"><a href="allskills.html" aria-label="Aerial and pole resources">Find training
                 resources</a></h1>
         <section class="scroll-cards">
 
-            <article class="card">
-                <div class="lineup-item-img" alt=""><h2 class="image-text">Hoop/lyra</h2></div>
+            <article class="scroll-item">
+                <div class="lineup-item-background" alt=""><h2 class="image-text">Hoop/lyra</h2></div>
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="hoop.html" aria-label="Hoop or lyra resources">Hoop/lyra</a></h2>
@@ -230,16 +230,11 @@
                                 alt="Like"></button>
                     </div>
                     <p class="item-text">Description</p>
-                    <div class="item-tags-group">
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                    </div>
                 </div>
             </article>
 
-            <article class="card">
-                <div class="lineup-item-img" alt=""><h2 class="image-text">Silks</h2></div>
+            <article class="scroll-item">
+                <div class="lineup-item-background" alt=""><h2 class="image-text">Silks</h2></div>
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="silks.html" aria-label="Silks resources">Silks</a></h2>
@@ -247,16 +242,11 @@
                                 alt="Like"></button>
                     </div>
                     <p class="item-text">Description</p>
-                    <div class="item-tags-group">
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                    </div>
                 </div>
             </article>
 
-            <article class="card">
-                <div class="lineup-item-img" alt=""><h2 class="image-text">Trapeze</h2></div>
+            <article class="scroll-item">
+                <div class="lineup-item-background" alt=""><h2 class="image-text">Trapeze</h2></div>
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="trapeze.html" aria-label="Trapeze resources">Trapeze</a></h2>
@@ -264,16 +254,11 @@
                                 alt="Like"></button>
                     </div>
                     <p class="item-text">Description</p>
-                    <div class="item-tags-group">
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                    </div>
                 </div>
             </article>
 
-            <article class="card">
-                <div class="lineup-item-img" alt=""><h2 class="image-text">Hammock/sling</h2></div>
+            <article class="scroll-item">
+                <div class="lineup-item-background" alt=""><h2 class="image-text">Hammock/sling</h2></div>
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="hammock.html"
@@ -282,16 +267,11 @@
                                 alt="Like"></button>
                     </div>
                     <p class="item-text">Description</p>
-                    <div class="item-tags-group">
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                    </div>
                 </div>
             </article>
 
-            <article class="card">
-                <div class="lineup-item-img" alt=""><h2 class="image-text">Pole</h2></div>
+            <article class="scroll-item">
+                <div class="lineup-item-background" alt=""><h2 class="image-text">Pole</h2></div>
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="pole.html" aria-label="Pole resources">Pole</a></h2>
@@ -299,16 +279,11 @@
                                 alt="Like"></button>
                     </div>
                     <p class="item-text">Description</p>
-                    <div class="item-tags-group">
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                    </div>
                 </div>
             </article>
 
-            <article class="card">
-                <div class="lineup-item-img" alt=""><h2 class="image-text">Straps</h2></div>
+            <article class="scroll-item">
+                <div class="lineup-item-background" alt=""><h2 class="image-text">Straps</h2></div>
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="straps.html" aria-label="Straps resources">Straps</a></h2>
@@ -316,16 +291,11 @@
                                 alt="Like"></button>
                     </div>
                     <p class="item-text">Description</p>
-                    <div class="item-tags-group">
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                    </div>
                 </div>
             </article>
 
-            <article class="card">
-                <div class="lineup-item-img" alt=""><h2 class="image-text">Rope</h2></div>
+            <article class="scroll-item">
+                <div class="lineup-item-background" alt=""><h2 class="image-text">Rope</h2></div>
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="rope.html" aria-label="Rope resources">Rope</a></h2>
@@ -333,16 +303,11 @@
                                 alt="Like"></button>
                     </div>
                     <p class="item-text">Description</p>
-                    <div class="item-tags-group">
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                    </div>
                 </div>
             </article>
 
-            <article class="card">
-                <div class="lineup-item-img" alt=""><h2 class="image-text">Hair hang</h2></div>
+            <article class="scroll-item">
+                <div class="lineup-item-background" alt=""><h2 class="image-text">Hair hang</h2></div>
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="hairhang.html" aria-label="Hair hang resources">Hair hang</a></h2>
@@ -350,16 +315,11 @@
                                 alt="Like"></button>
                     </div>
                     <p class="item-text">Description</p>
-                    <div class="item-tags-group">
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                    </div>
                 </div>
             </article>
 
-            <article class="card">
-                <div class="lineup-item-img" alt=""><h2 class="image-text">Specialty</h2></div>
+            <article class="scroll-item">
+                <div class="lineup-item-background" alt=""><h2 class="image-text">Specialty</h2></div>
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="otherskills.html"
@@ -368,11 +328,6 @@
                                 alt="Like"></button>
                     </div>
                     <p class="item-text">Description</p>
-                    <div class="item-tags-group">
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                    </div>
                 </div>
             </article>
 
@@ -389,128 +344,88 @@
                 resources</a></h1>
         <section class="scroll-cards">
 
-            <article class="card">
-                <div class="lineup-item-img" alt=""><h2 class="image-text">Coaches</h2></div>
+            <article class="scroll-item">
+                <div class="lineup-item-background" alt=""><h2 class="image-text">Coaches</h2></div>
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="coaches.html" aria-label="Coaches">Find a coach</a></h2>
                     </div>
                     <p class="item-text">Near you or online</p>
-                    <div class="item-tags-group">
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                    </div>
                 </div>
             </article>
 
-            <article class="card">
-                <div class="lineup-item-img" alt=""><h2 class="image-text">Performers</h2></div>
+            <article class="scroll-item">
+                <div class="lineup-item-background" alt=""><h2 class="image-text">Performers</h2></div>
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="performers.html" aria-label="Performers">Discover performers</a>
                         </h2>
                     </div>
                     <p class="item-text">Around the world</p>
-                    <div class="item-tags-group">
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                    </div>
                 </div>
             </article>
 
-            <article class="card">
-                <div class="lineup-item-img" alt=""><h2 class="image-text">Troupes and collectives</h2></div>
+            <article class="scroll-item">
+                <div class="lineup-item-background" alt=""><h2 class="image-text">Troupes and collectives</h2></div>
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="collectives.html" aria-label="Troupes and collectives">Explore
                                 collectives</a></h2>
                     </div>
                     <p class="item-text">Around the world</p>
-                    <div class="item-tags-group">
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                    </div>
                 </div>
             </article>
 
-            <article class="card">
-                <div class="lineup-item-img" alt=""><h2 class="image-text">Retreats</h2></div>
+            <article class="scroll-item">
+                <div class="lineup-item-background" alt=""><h2 class="image-text">Retreats</h2></div>
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="retreats.html" aria-label="Retreats">Find a retreat</a></h2>
                     </div>
                     <p class="item-text">Anywhere in the world</p>
-                    <div class="item-tags-group">
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                    </div>
                 </div>
             </article>
 
-            <article class="card">
-                <div class="lineup-item-img" alt=""><h2 class="image-text">Competitions</h2></div>
+            <article class="scroll-item">
+                <div class="lineup-item-background" alt=""><h2 class="image-text">Competitions</h2></div>
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="competitions.html" aria-label="Competitions">Join a
                                 competition</a></h2>
                     </div>
                     <p class="item-text">In your area</p>
-                    <div class="item-tags-group">
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                    </div>
                 </div>
             </article>
 
-            <article class="card">
-                <div class="lineup-item-img" alt=""><h2 class="image-text">Festivals</h2></div>
+            <article class="scroll-item">
+                <div class="lineup-item-background" alt=""><h2 class="image-text">Festivals</h2></div>
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="festivals.html" aria-label="Festivals">Find festivals</a></h2>
                     </div>
                     <p class="item-text">Around the world</p>
-                    <div class="item-tags-group">
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                    </div>
                 </div>
             </article>
 
-            <article class="card">
-                <div class="lineup-item-img" alt=""><h2 class="image-text">Physio and flexy</h2></div>
+            <article class="scroll-item">
+                <div class="lineup-item-background" alt=""><h2 class="image-text">Physio and flexy</h2></div>
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="health.html" aria-label="Physios and flexibility resources">Find
                                 a physio</a></h2>
                     </div>
                     <p class="item-text">Near you or online</p>
-                    <div class="item-tags-group">
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                    </div>
                 </div>
             </article>
 
-            <article class="card">
-                <div class="lineup-item-img" alt=""><h2 class="image-text">Photography and video</h2></div>
+            <article class="scroll-item">
+                <div class="lineup-item-background" alt=""><h2 class="image-text">Photography and video</h2></div>
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="photography.html"
                                 aria-label="Photographers and videographers">Find a photographer</a></h2>
                     </div>
                     <p class="item-text">In your area</p>
-                    <div class="item-tags-group">
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                    </div>
                 </div>
             </article>
 
