--- a/hairhang.html
+++ b/hairhang.html
@@ -202,19 +202,22 @@
     </header>
 
     <main id="main lineup-main" class="lineup-main">
-        <section class="lineup-top">
-            <h1 class="lineup-h1">Find hair hanging resources</h1>
+        <section class="not-modal" id="not-modal">
+        <section class="lineup-top" id="lineup-top">
+            <h1 class="lineup-h1">Find hair hang resources</h1>
             <div class="lineup-search-items">
                 <input type="search" class="search-bar" id="lineup-search-bar" placeholder="Search...">
                 <input type="image" src="assets/magnify.svg" class="search-icon" id="lineup-search-icon" alt="Search">
             </div>
         </section>
         <section class="lineup-container" id="lineup-container">
-            <h1>All hair hanging resources</h1>
+            <h1>All hair hang resources</h1>
             <div class="filter-menu" id="filter-menu"></div>
             <div class="lineup-lineup" id="lineup-lineup"></div>
         </section>
         <button class="load-more-btn" id="load-more-btn">Load more</button>
+        </section>
+        <section class="lineup-item-modal" id="lineup-item-modal"></section>
     </main>
 
     <footer>
