--- a/health.html
+++ b/health.html
@@ -202,8 +202,9 @@
     </header>
 
     <main id="main lineup-main" class="lineup-main">
-        <section class="lineup-top">
-            <h1 class="lineup-h1">Find physios and more</h1>
+        <section class="not-modal" id="not-modal">
+        <section class="lineup-top" id="lineup-top">
+            <h1 class="lineup-h1">Find circus physios and more</h1>
             <div class="lineup-search-items">
                 <input type="search" class="search-bar" id="lineup-search-bar" placeholder="Search...">
                 <input type="image" src="assets/magnify.svg" class="search-icon" id="lineup-search-icon" alt="Search">
@@ -215,6 +216,8 @@
             <div class="lineup-lineup" id="lineup-lineup"></div>
         </section>
         <button class="load-more-btn" id="load-more-btn">Load more</button>
+        </section>
+        <section class="lineup-item-modal" id="lineup-item-modal"></section>
     </main>
 
     <footer>
