--- a/index.html
+++ b/index.html
@@ -440,9 +440,13 @@
                 world</a>
         </h1>
         <section class="map-card-container">
-            <div class="map-card">
-                <img class="index-map-img" src="assets/placeholder.jpg" alt="Placeholder image for embedded map">
+            <a href="studiomap.html" aria-label="Map of studios">
+            <div class="map-image-div">
+                <div class="map-image-overlay"></div>
+                <img class="index-map-card-item" alt="Studios map" src="assets/explorethemapclear.png">
+                <p class="map-text">Explore the map</p>
             </div>
+            </a>
             <div class="index-map-text">
                 <p class="map-text-top">Explore our map of aerial and pole studios around the world, with more than
                     2,000 studios marked in total across all continents!
