Fix about page image view

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         <section class="scroll-cards">
 
             <article class="scroll-item">
-                <div class="lineup-item-background" alt=""><h2 class="image-text">Hoop/lyra</h2></div>
+                <img class="lineup-item-img" src="assets/hoop.png" alt="">
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="hoop.html" aria-label="Hoop or lyra resources">Hoop/lyra</a></h2>
@@ -234,7 +234,7 @@
             </article>
 
             <article class="scroll-item">
-                <div class="lineup-item-background" alt=""><h2 class="image-text">Silks</h2></div>
+                <img class="lineup-item-img" src="assets/silks.png" alt="">
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="silks.html" aria-label="Silks resources">Silks</a></h2>
@@ -246,7 +246,7 @@
             </article>
 
             <article class="scroll-item">
-                <div class="lineup-item-background" alt=""><h2 class="image-text">Trapeze</h2></div>
+                <img class="lineup-item-img" src="assets/trapeze.png" alt="">
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="trapeze.html" aria-label="Trapeze resources">Trapeze</a></h2>
@@ -258,7 +258,7 @@
             </article>
 
             <article class="scroll-item">
-                <div class="lineup-item-background" alt=""><h2 class="image-text">Hammock/sling</h2></div>
+                <img class="lineup-item-img" src="assets/hammock.png" alt="">
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="hammock.html"
@@ -271,7 +271,7 @@
             </article>
 
             <article class="scroll-item">
-                <div class="lineup-item-background" alt=""><h2 class="image-text">Pole</h2></div>
+                <img class="lineup-item-img" src="assets/pole.png" alt="">
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="pole.html" aria-label="Pole resources">Pole</a></h2>
@@ -283,7 +283,7 @@
             </article>
 
             <article class="scroll-item">
-                <div class="lineup-item-background" alt=""><h2 class="image-text">Straps</h2></div>
+                <img class="lineup-item-img" src="assets/straps.png" alt="">
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="straps.html" aria-label="Straps resources">Straps</a></h2>
@@ -295,7 +295,7 @@
             </article>
 
             <article class="scroll-item">
-                <div class="lineup-item-background" alt=""><h2 class="image-text">Rope</h2></div>
+                <img class="lineup-item-img" src="assets/rope.png" alt="">
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="rope.html" aria-label="Rope resources">Rope</a></h2>
@@ -307,7 +307,7 @@
             </article>
 
             <article class="scroll-item">
-                <div class="lineup-item-background" alt=""><h2 class="image-text">Hair hang</h2></div>
+                <img class="lineup-item-img" src="assets/hairhang.png" alt="">
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="hairhang.html" aria-label="Hair hang resources">Hair hang</a></h2>
@@ -319,7 +319,7 @@
             </article>
 
             <article class="scroll-item">
-                <div class="lineup-item-background" alt=""><h2 class="image-text">Specialty</h2></div>
+                <img class="lineup-item-img" src="assets/specialty.png" alt="">
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="otherskills.html"
