--- a/about.html
+++ b/about.html
@@ -204,7 +204,8 @@
     </header>
 
     <main id="about-main" class="about-main">
-        <img class="about-item-img" src="assets/placeholder.jpg" alt="About page featured image">
+        <img class="about-img" src="assets/hoop.png">
+            
         <section class="about-text">
             <h2 class="about-h2">The Aerial Arts Hub</h2>
             <p class="about-p">The Aerial Arts Hub is a platform for the aerial and pole community
