Change the coverage to only three continents

--- a/heels.html
+++ b/heels.html
@@ -14,7 +14,7 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Find pole heels available in your area and around the world">
+    <meta name="description" content="Find pole heels available in your area, across Europe, Asia, and Africa">
     <title>Find pole heels | The Aerial Arts Hub</title>
     <link rel="stylesheet" href="styles.css">
     </link>
