--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Find aerial and pole studios around the world, polewear brands, qualified coaches and performers, circus events and more">
+    <meta name="description" content="Find aerial and pole studios across Europe, Asia, and Africa, polewear brands, qualified coaches and performers, circus events and more">
     <title>The Aerial Arts Hub</title>
     <link rel="stylesheet" href="styles.css"></link>
     <link rel="icon" type="image/x-icon" href="assets/favicon.png">
@@ -392,7 +392,7 @@
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="retreats.html" aria-label="Retreats">Find a retreat</a></h2>
                     </div>
-                    <p class="item-text">Anywhere in the world</p>
+                    <p class="item-text">Around the world</p>
                 </div>
             </article>
 
@@ -446,20 +446,19 @@
             </div>
         </section>
 
-        <h1 class="cards-category map-h1"><a href="studiomap.html" aria-label="Map of studios">Studios around the
-                world</a>
+        <h1 class="cards-category map-h1"><a href="studiomap.html" aria-label="Map of studios">Studios around the world</a>
         </h1>
         <section class="map-card-container">
             <a href="studiomap.html" aria-label="Map of studios">
             <div class="map-image-div">
                 <div class="map-image-overlay"></div>
-                <img class="index-map-card-item" alt="Studios map" src="assets/explorethemapclear.png">
+                <img class="index-map-card-item" alt="Studios map" src="assets/map2025.png">
                 <p class="map-text">Explore the map</p>
             </div>
             </a>
             <div class="index-map-text">
-                <p class="map-text-top">Explore our map of aerial and pole studios around the world, with more than
-                    2,000 studios marked in total across all continents!
+                <p class="map-text-top">Explore our map of aerial and pole studios across Europe, Asia, and Africa, with more than
+                    1,000 studios marked in total across the three continents!
                 </p>
                 <p class="map-text-bottom">Know of any missing studios? Reach out on <a
                         href="https://www.instagram.com/theaerialartshub/" target="_blank" class="text-link"
