--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="The Aerial Arts Hub is a platform for the aerial and pole community
-    to discover studios, coaches, performers, brands, and other useful resources all over the world">
+    to discover studios, coaches, performers, brands, and other useful resources across Europe, Asia, and Africa">
     <title>About | The Aerial Arts Hub</title>
     <link rel="stylesheet" href="styles.css">
     </link>
@@ -219,7 +219,7 @@
         <section class="about-text">
             <h2 class="about-h2">The Aerial Arts Hub</h2>
             <p class="about-p">The Aerial Arts Hub is a platform for the aerial and pole community
-                to discover studios, coaches, performers, brands, and other useful resources all over the world.
+                to discover studios, coaches, performers, brands, and other useful resources across Europe, Asia, and Africa.
                 It was created with the aim to be up-to-date, inclusive, accessible, and completely free.
             </p>
             <p class="about-p">Disclaimer: If you use the platform, please be aware that featured studios, brands and events are not
