--- a/allresources.html
+++ b/allresources.html
@@ -14,7 +14,7 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Find aerial and pole resources, from studios around the world to polewear brands and an encyclopedia of aerial and pole skills">
+    <meta name="description" content="Find aerial and pole resources across Europe, Asia, and Africa, from studios to polewear brands and an encyclopedia of aerial and pole skills">
     <title>Aerial and pole resources | The Aerial Arts Hub</title>
     <link rel="stylesheet" href="styles.css">
     </link>
