--- a/clothing.html
+++ b/clothing.html
@@ -14,7 +14,7 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Find aerial clothing and polewear available in your area and around the world">
+    <meta name="description" content="Find aerial clothing and polewear available in your area, across Europe, Asia, and Africa">
     <title>Find polewear and aerial clothing | The Aerial Arts Hub</title>
     <link rel="stylesheet" href="styles.css">
     </link>
