--- a/collectives.html
+++ b/collectives.html
@@ -14,7 +14,7 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Find aerial and pole collectives, troupes and duos in your area and around the world">
+    <meta name="description" content="Find aerial and pole collectives, troupes and duos across Europe, Asia, and Africa">
     <title>Aerial and pole collectives, troupes and duos | The Aerial Arts Hub</title>
     <link rel="stylesheet" href="styles.css">
     </link>
