--- a/events.html
+++ b/events.html
@@ -14,7 +14,7 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Find aerial and pole events happening in your area and around the world">
+    <meta name="description" content="Find aerial and pole events happening in your area, across Europe, Asia, and Africa">
     <title>What's on | Aerial and pole events | The Aerial Arts Hub</title>
     <link rel="stylesheet" href="styles.css">
     </link>
