--- a/festivals.html
+++ b/festivals.html
@@ -14,8 +14,8 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Find aerial, pole and circus festivals in your area and around the world">
-    <title>Aerial, pole and circus festivals around the world | The Aerial Arts Hub</title>
+    <meta name="description" content="Find aerial, pole and circus festivals in your area, across Europe, Asia, and Africa">
+    <title>Aerial, pole and circus festivals across Europe, Asia, and Africa | The Aerial Arts Hub</title>
     <link rel="stylesheet" href="styles.css">
     </link>
 </head>
