--- a/health.html
+++ b/health.html
@@ -14,7 +14,7 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Find health resources for aerialists and pole dancers around the world, from physiotherapists to flexibility training">
+    <meta name="description" content="Find health resources for aerialists and pole dancers across Europe, Asia, and Africa, from physiotherapists to flexibility training">
     <title>Circus physios, flexibility resources and more | The Aerial Arts Hub</title>
     <link rel="stylesheet" href="styles.css">
     </link>
