--- a/results.html
+++ b/results.html
@@ -14,7 +14,7 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Aerial and pole resources in your area and around the world">
+    <meta name="description" content="Aerial and pole resources in your area, across Europe, Asia, and Africa">
     <title>Aerial and pole resources | Search results | The Aerial Arts Hub</title>
     <link rel="stylesheet" href="styles.css">
     </link>
