--- a/retreats.html
+++ b/retreats.html
@@ -14,8 +14,8 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Find aerial and pole retreats around the world">
-    <title>Aerial and pole retreats around the world | The Aerial Arts Hub</title>
+    <meta name="description" content="Find aerial and pole retreats across Europe, Asia, and Africa">
+    <title>Aerial and pole retreats across Europe, Asia, and Africa | The Aerial Arts Hub</title>
     <link rel="stylesheet" href="styles.css">
     </link>
 </head>
