--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
                     </button>
                     <ul class="desktop-dropdown-container" id="desktop-dropdown-container">
                         <li class="dropdown-item"><a href="health.html"
-                                aria-label="Physios and flexibility resources">Physio and flexy</a></li>
+                                aria-label="Physios and flexibility resources">Physios and flexy coaches</a></li>
                         <li class="dropdown-item"><a href="photography.html"
                                 aria-label="Photographers and videographers">Photography and video</a></li>
                         <li class="dropdown-item"><a href="otherresources.html" aria-label="Other resources">Other
@@ -91,9 +91,9 @@
                         <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
                     </button>
                     <ul class="desktop-dropdown-container" id="desktop-dropdown-container">
-                        <li class="dropdown-item"><a href="clothing.html" aria-label="Aerial and poleweaer">Clothing</a>
+                        <li class="dropdown-item"><a href="clothing.html" aria-label="Aerial and poleweaer">Aerial and polewear</a>
                         </li>
-                        <li class="dropdown-item"><a href="heels.html" aria-label="Pole heels">Heels</a></li>
+                        <li class="dropdown-item"><a href="heels.html" aria-label="Pole heels">Pole heels</a></li>
                         <li class="dropdown-item"><a href="equipment.html" aria-label="Equipment">Equipment</a></li>
                     </ul>
                 </li>
@@ -141,7 +141,7 @@
                     <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
                     <ul class="dropdown-container" id="dropdown-container">
                         <li class="dropdown-item"><a href="health.html"
-                                aria-label="Physios and flexibility resources">Physio and flexy</a></li>
+                                aria-label="Physios and flexibility resources">Physios and flexy coaches</a></li>
                         <li class="dropdown-item"><a href="photography.html"
                                 aria-label="Photographers and videographers">Photography and video</a></li>
                         <li class="dropdown-item"><a href="otherresources.html" aria-label="Other resources">Other
@@ -154,9 +154,9 @@
                     </button>
                     <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
                     <ul class="dropdown-container" id="dropdown-container">
-                        <li class="dropdown-item"><a href="clothing.html" aria-label="Aerial and poleweaer">Clothing</a>
+                        <li class="dropdown-item"><a href="clothing.html" aria-label="Aerial and poleweaer">Aerial and polewear</a>
                         </li>
-                        <li class="dropdown-item"><a href="heels.html" aria-label="Pole heels">Heels</a></li>
+                        <li class="dropdown-item"><a href="heels.html" aria-label="Pole heels">Pole heels</a></li>
                         <li class="dropdown-item"><a href="equipment.html" aria-label="Equipment">Equipment</a></li>
                     </ul>
                 </li>
